--- a/exchlog/exchlog.csproj
+++ b/exchlog/exchlog.csproj
@@ -66,6 +66,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IniFile.cs" />
     <Compile Include="MainEx.cs" />
     <Compile Include="ProjectInstaller.cs">
       <SubType>Component</SubType>
